Simplify deps definition